# neu

./: Cargo.toml  hoge.php
.github/workflows/: rust.yml
src/: action.rs  actor.rs  buffer.rs  cmd.rs  cmdline.rs  compute.rs  config.rs  editor.rs  highlight.rs  history.rs  language.rs  main.rs  mode.rs  motion.rs  operate.rs  position.rs  renderer.rs  search.rs  selection.rs  state.rs  store.rs
src/edit/: action.rs  mod.rs  store.rs
src/movement/: action.rs  mod.rs  store.rs
src/store/: edit.rs  mod.rs
