[package]
name = "neu"
version = "0.0.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
edition = "2018"
description = "vi like text editor"
license = "Unlicense"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.48"
backtrace = "0.3.60"
clap = "3.0.0-beta.2"
dirs = "3.0.2"
flume = "0.10.5"
hashbrown = "0.11.2"
nom = "6.1.2"
ropey = "1.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
smol = "1.2.5"
termion = "1.5.6"
toml = "0.5.8"
tracing = { git = "https://github.com/tokio-rs/tracing", features = ["release_max_level_warn"] }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }
tree-sitter = "0.19.5"
tree-sitter-rust = "0.19.0"
unicode-width = "0.1.8"
