[package]
name = "neu"
version = "0.0.0"
authors = ["Satoshi Amemiya <amemiya@protonmail.com>"]
edition = "2018"
description = "vi like text editor"
license = "Unlicense"

[dependencies]
anyhow = "1.0.40"
backtrace = "0.3.60"
clap = "3.0.0-beta.2"
dirs = "3.0.2"
flume = "0.10.5"
hashbrown = "0.11.2"
nom = "6.1.2"
ropey = "1.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
smol = "1.2.5"
termion = "1.5.6"
toml = "0.5.8"
tracing = { features = ["release_max_level_warn"], version = "0.1.26" }
tracing-subscriber = "0.2.19"
tree-sitter-rust = "0.19.0"
tree-sitter = "0.19.5"
unicode-width = "0.1.8"
once_cell = "1.8.0"
tree-sitter-javascript = "0.19.0"
regex = "1.5.4"
